--- a/resume_style.css
+++ b/resume_style.css
@@ -1,9 +1,9 @@
 body {
     font-family: Georgia, serif;
-    line-height: 1.2;
+    line-height: 1.6;
     padding: 12px;
     background-color: antiquewhite;
-    text-align: justify;
+    text-align: left;
 }
 
 header, main {
@@ -22,17 +22,23 @@ h1, a {
 }
 
 main p, ul{
-    font-size: 14px;
+    font-size: 16px;
+    margin-bottom: 1em;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap; 
 }
 
 .column {
-    float: left;
-    width: 30%;
+    flex: 1;
     padding: 10px;
+    min-width: 200px;
   }
 
   .row:after {
     content: "";
     display: table;
     clear: both;
-  }
+  } 
